--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="app.js" defer></script>
   </head>
-  <body class="bg-slate-800">
+  <body class="bg-black">
     <header class="container max-w-4xl mx-auto py-8">
       <h1 class="text-white text-4xl font-bold text-center">
-        Flowise API Demo
+        Flowise API Hermine
       </h1>
     </header>
     <section class="container max-w-4xl mx-auto py-8">
@@ -21,7 +21,7 @@
       </form>
     </section>
     <section class="container max-w-4xl mx-auto py-8 text-white">
-        <p class="text-center p-4 bg-slate-700 w-full rounded-xl" id="response">Chatbot's response goes here..</p>
+        <p class="text-justify p-4 bg-slate-700 w-full rounded-xl" id="response">Chatbot's response goes here..</p>
     </section>
   </body>
 </html>
